# goit-algo2-hw-04

./: README.md  pyproject.toml
task_1/: README.md  calculate_max_goods_flow.py
task_1/logistics_network_simulator/: README.md  __init__.py  __main__.py  build_graph.py  data.py  draw_graph.py  draw_network_load_graph.py  edmonds_karp.py  logistics_network_simulator.py  utils.py
task_2/: extend_trie.py
