[project]
name = "goit-algo2-hw-04"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "typer>=0.14.0",
    "rich>=13.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]
